--- a/Network/Network/Network.csproj
+++ b/Network/Network/Network.csproj
@@ -1,10 +1,67 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{37BCA38A-B2F6-49F8-A08B-F8AB19E56D93}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <ApplicationIcon />
-    <StartupObject />
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Network</RootNamespace>
+    <AssemblyName>Network</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
+	<LangVersion>9.0</LangVersion>
   </PropertyGroup>
-
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+	<OutputPath>$(SolutionDir)Build\Debug\bin\_Dependencies\$(AssemblyName)</OutputPath>
+    <IntermediateOutputPath>$(SolutionDir)Build\Debug\obj\_Dependencies\$(AssemblyName)</IntermediateOutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+	<OutputPath>$(SolutionDir)Build\Release\bin\_Dependencies\$(AssemblyName)</OutputPath>
+    <IntermediateOutputPath>$(SolutionDir)Build\Release\obj\_Dependencies\$(AssemblyName)</IntermediateOutputPath>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Client.cs" />
+    <Compile Include="Core\Serializer.cs" />
+    <Compile Include="Core\ThreadSafeList.cs" />
+    <Compile Include="Core\TimestampTextWriter.cs" />
+    <Compile Include="DataTransfer\Notification\LoginNotification.cs" />
+    <Compile Include="DataTransfer\Notification\SendMessageNotification.cs" />
+    <Compile Include="DataTransfer\Notification\_Notification.cs" />
+    <Compile Include="DataTransfer\Request\LoginRequest.cs" />
+    <Compile Include="DataTransfer\Request\SendMessageRequest.cs" />
+    <Compile Include="DataTransfer\Request\_Request.cs" />
+    <Compile Include="DataTransfer\Response\LoginResponse.cs" />
+    <Compile Include="DataTransfer\Response\SendMessageResponse.cs" />
+    <Compile Include="DataTransfer\Response\_Response.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
