--- a/apps/ClientApp/ClientApp.csproj
+++ b/apps/ClientApp/ClientApp.csproj
@@ -147,11 +147,11 @@
     <Resource Include="Icons\delete.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\libs\ClientLib\Network.Client.csproj">
+    <ProjectReference Include="..\..\libs\Network.Client\Network.Client.csproj">
       <Project>{ffc8f06c-41bf-46f8-bf7c-7e6e23dff20c}</Project>
       <Name>Network.Client</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\libs\Shared\Network.Shared.csproj">
+    <ProjectReference Include="..\..\libs\Network.Shared\Network.Shared.csproj">
       <Project>{1699265f-9187-4a50-bb3d-3dc3e6d48161}</Project>
       <Name>Network.Shared</Name>
     </ProjectReference>
