--- a/libs/Network.Server/Network.Server.csproj
+++ b/libs/Network.Server/Network.Server.csproj
@@ -104,7 +104,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Network.Shared.csproj">
+    <ProjectReference Include="..\Network.Shared\Network.Shared.csproj">
       <Project>{1699265f-9187-4a50-bb3d-3dc3e6d48161}</Project>
       <Name>Network.Shared</Name>
     </ProjectReference>
