--- a/apps/Startup/Startup.csproj
+++ b/apps/Startup/Startup.csproj
@@ -36,8 +36,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>$(SolutionDir)build\Debug\bin\$(AssemblyName)</OutputPath>
-    <IntermediateOutputPath>$(SolutionDir)build\Debug\obj\$(AssemblyName)</IntermediateOutputPath>
+    <OutputPath>$(SolutionDir)build\Debug\bin\apps\$(AssemblyName)</OutputPath>
+    <IntermediateOutputPath>$(SolutionDir)build\Debug\obj\apps\$(AssemblyName)</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -46,8 +46,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>$(SolutionDir)build\Release\bin\$(AssemblyName)</OutputPath>
-    <IntermediateOutputPath>$(SolutionDir)build\Release\obj\$(AssemblyName)</IntermediateOutputPath>
+    <OutputPath>$(SolutionDir)build\Release\bin\apps\$(AssemblyName)</OutputPath>
+    <IntermediateOutputPath>$(SolutionDir)build\Release\obj\apps\$(AssemblyName)</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -93,6 +93,14 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\tests\ClientTest\ClientTest.csproj">
+      <Project>{2ff1e12d-8e69-4290-8951-5b8310379cf0}</Project>
+      <Name>ClientTest</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\tests\ServerTest\ServerTest.csproj">
+      <Project>{bcc3c409-20a8-4959-a4db-b5a9a95da306}</Project>
+      <Name>ServerTest</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClientApp\ClientApp.csproj">
       <Project>{02f220bf-9f61-4bd4-a59b-a427c701abf7}</Project>
       <Name>ClientApp</Name>
