--- a/libs/Network.Server/App.config
+++ b/libs/Network.Server/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="DrocsidDbContext" connectionString="metadata=res://*/Database.DrocsidDbModel.csdl|res://*/Database.DrocsidDbModel.ssdl|res://*/Database.DrocsidDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=PZ_DB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DrocsidDbContext" connectionString="metadata=res://*/Database.DrocsidDbModel.csdl|res://*/Database.DrocsidDbModel.ssdl|res://*/Database.DrocsidDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Drocsid_DB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
